Fixed double dipping and viewport height bug on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 90%;
-  height: 100vh;
+  height: 100dvh;
   align-items: center;
   display: grid; 
   grid-template-areas: "messages"
